istio-ingress-app/istio_gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: book-keeping-gateway
  namespace: book-keeping-app
spec:
  selector:
    istio: gateway # This must match the label of your Istio ingress gateway pods
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - bookkeeping.public.io
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - bookkeeping.public.io
    tls:
      mode: SIMPLE
      credentialName: wildcard-public-tls # This must match the name of the secret containing the SSL certificate and private key
